added user controller and changed singup methods

--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -8,7 +8,7 @@
       <mat-form-field>
         <input
           matInput
-          name="fullName"
+          name="fullname"
           ngModel
           type="name"
           placeholder="Full Name"
