--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,8 +1,8 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
 <div class="w3-main">
   <div class="w3-row-padding">
-    <div class="w3-col s12 m9" id="engine">
-      <mat-card>
+    <div class="w3-col s12 m8 l9">
+      <mat-card id="engine" style="max-height: 50rem;">
         <app-viewer-engine></app-viewer-engine>
         <button mat-stroked-button type="button" (click)="filePicker.click()">
           UPLOAD STL
@@ -34,7 +34,7 @@
         </mat-radio-group>
       </mat-card>
     </div>
-    <div class="w3-col s12 m3">
+    <div class="w3-col s12 m4 l3">
       <mat-card>
         <mat-card-title>Order</mat-card-title>
         <mat-card-content
@@ -43,34 +43,39 @@
         >
       </mat-card>
       <mat-card>
-        <mat-card-content class="upper-padding">
-          <p style="float: left;">Volume:</p>
-          <p style="float: right; font-weight: bold;">
-            {{ modelVolume }} {{ modelUnit }}^3
+        <mat-card-content>
+          <p style="text-align: left;">
+            Volume:
+            <span style="float: right; font-weight: bold;">
+              {{ modelVolume }} {{ modelUnit }}^3
+            </span>
           </p>
-        </mat-card-content>
-        <mat-divider [inset]="true"> </mat-divider>
-        <mat-card-content class="upper-padding">
+          <mat-divider [inset]="true"> </mat-divider>
           <div id="textContainer">
-            <p style="float: left;">Cost to print:</p>
+            <p style="text-align: left;">
+              Cost to print:
 
-            <p style="float: right; font-weight: bold; color: #cc2400;">
-              ${{ modelCost }}
+              <span style="float: right; font-weight: bold; color: #cc2400;">
+                ${{ modelCost }}
+              </span>
             </p>
           </div>
+          <mat-divider [inset]="true"></mat-divider>
+          <div>
+            <button mat-flat-button color="accent" class="button">
+              <mat-icon>play_arrow </mat-icon>
+              ORDER NOW
+            </button>
+          </div>
+          <div>
+            <button mat-flat-button color="accent" class="button">
+              <mat-icon>
+                add_shopping_cart
+              </mat-icon>
+              ADD TO CART
+            </button>
+          </div>
         </mat-card-content>
-
-        <button mat-flat-button color="accent">
-          <mat-icon>play_arrow </mat-icon>
-          ORDER NOW
-        </button>
-
-        <button mat-flat-button color="accent">
-          <mat-icon>
-            add_shopping_cart
-          </mat-icon>
-          ADD TO CART
-        </button>
       </mat-card>
     </div>
   </div>
