--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -23,3 +23,11 @@ button {
 .example-radio-button {
   margin: 5px;
 }
+
+.button {
+  // display: flex;
+  // margin-top: 8px;
+  margin-left: 0;
+  // margin-right: auto;
+  // float: left;
+}
