styling and form

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
   <span>
-    <a routerLink="">3DPrint</a>
+    <a routerLink="" class="h1" style="font-size: xx-large;">3DPrint</a>
   </span>
   <span class="spacer"></span>
   <ul>
