--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Rubik:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 html,
 body {
@@ -7,5 +8,46 @@ body {
 body {
   background-color: #f4f3f3;
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: "lato", sans-serif;
+}
+
+.h1 {
+  font-family: "rubik", sans-serif;
+  font-weight: 800;
+  font-style: italic;
+}
+
+mat-card-title {
+  font-family: "rubik", sans-serif;
+  font-weight: 600;
+  font-style: italic;
+}
+
+.mat-toolbar .mat-button {
+  font-family: "rubik", sans-serif;
+  font-weight: 600;
+  font-size: medium;
+  font-style: italic;
+}
+
+.mat-card .mat-flat-button {
+  font-family: "rubik", sans-serif;
+  font-weight: 500;
+  font-size: small;
+  font-style: italic;
+}
+
+.mat-card .mat-stroked-button {
+  font-family: "rubik", sans-serif;
+  font-weight: 500;
+  font-size: small;
+  font-style: italic;
+}
+
+.mat-card {
+  transition: box-shadow none;
+}
+
+mat-form-field {
+  width: 100%;
 }
