--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -4,6 +4,11 @@ ul {
   margin: 0;
 }
 
+.sticky {
+  position: fixed;
+  z-index: 999;
+}
+
 .spacer {
   flex: 1 1 auto;
 }
@@ -16,3 +21,37 @@ a {
   text-decoration: none;
   color: white;
 }
+
+.h1 {
+  font-family: "rubik", sans-serif;
+  font-weight: 800;
+  font-style: italic;
+  // color: #ffa603;
+  font-size: 37px;
+}
+
+@media only screen and (min-width: 600px) {
+  .show-on-small-screen {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .hide-on-small-screen {
+    display: none;
+  }
+}
+
+// .sidenav-container {
+//   width: 400px;
+//   height: 200px;
+//   margin: 12px;
+//   border: 1px solid #555;
+// }
+
+// mat-drawer-content {
+//   padding: 12px;
+//   display: flex;
+//   flex-direction: column;
+//   align-items: flex-start;
+// }
