--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -22,46 +22,89 @@
         />
       </mat-card>
       <mat-card>
-        <form [formGroup]="modelForm" (ngSubmit)="onFormSubmit()">
-          <div>
-            <mat-form-field>
-              <input
-                matInput
-                formControlName="title"
-                placeholder="Project Title"
-                required
-              />
-              <mat-error *ngIf="modelForm.get('title').invalid"></mat-error>
-            </mat-form-field>
-          </div>
+        <form (ngSubmit)="onFormSubmit()" #modelForm="ngForm">
+          <div class="form-group w3-row-padding">
+            <div class="w3-col s12 l4">
+              <mat-form-field>
+                <input
+                  class="form-control"
+                  matInput
+                  id="title"
+                  placeholder="Project Title"
+                  [(ngModel)]="model.title"
+                  name="title"
+                  [disabled]="!formDisplay"
+                  #title="ngModel"
+                  required
+                />
+                <mat-error *ngIf="title.valid"></mat-error>
+              </mat-form-field>
+            </div>
 
-          <div>
-            <label id="example-radio-group-label" style="display: flex;"
-              >Pick the units for your model</label
-            >
-            <mat-radio-group
-              aria-labelledby="example-radio-group-label"
-              class="example-radio-group"
-              [(ngModel)]="unit"
-              (ngModelChange)="onUnitSelect()"
-              formControlName="units"
-            >
-              <mat-radio-button
-                class="example-radio-button"
-                *ngFor="let unit of units"
-                [value]="unit"
+            <div class="w3-col s12 m7 l4">
+              <mat-radio-group
+                class="example-radio-group form-control"
+                [(ngModel)]="model.units"
+                name="unitsSelect"
+                (change)="onUnitSelect()"
+                [disabled]="!formDisplay"
+                ><p style="margin: 6px;">Units:</p>
+                <mat-radio-button
+                  class="example-radio-button"
+                  [checked]="unit === 'mm'"
+                  *ngFor="let unit of units"
+                  [value]="unit"
+                >
+                  {{ unit }}
+                </mat-radio-button>
+              </mat-radio-group>
+            </div>
+            <div class="w3-col s12 m5 l4">
+              <!-- <label style="display: block;">Enter a Quantity</label> -->
+
+              <mat-form-field>
+                <mat-label>Quantity</mat-label>
+
+                <input
+                  class="form-control"
+                  style="display: block;"
+                  type="number"
+                  matInput
+                  [(ngModel)]="model.quantity"
+                  name="units"
+                  #quantity="ngModel"
+                  [disabled]="!formDisplay"
+                  required
+                />
+                <mat-error *ngIf="!quantity.valid">Enter a quantity</mat-error>
+              </mat-form-field>
+            </div>
+            <div class="w3-col s12">
+              <mat-form-field>
+                <textarea
+                  class="form-control"
+                  matInput
+                  [(ngModel)]="model.comment"
+                  name="comment"
+                  #comment="ngModel"
+                  [disabled]="!formDisplay"
+                  placeholder="Special instructions for printing"
+                ></textarea>
+                <mat-error *ngIf="!comment.valid"
+                  >Enter a valid comment</mat-error
+                >
+              </mat-form-field>
+            </div>
+            <div class="w3-col s12">
+              <button
+                mat-flat-button
+                color="accent"
+                type="submit"
+                [disabled]="!modelForm.form.valid"
               >
-                {{ unit }}
-              </mat-radio-button>
-            </mat-radio-group>
-          </div>
-          <div>
-            <mat-form-field>
-              <textarea
-                matInput
-                placeholder="Special instructions for printing"
-              ></textarea>
-            </mat-form-field>
+                UPDATE
+              </button>
+            </div>
           </div>
         </form>
       </mat-card>
@@ -82,7 +125,8 @@
               {{ modelVolume }} {{ modelUnit }}^3
             </span>
           </p>
-          <mat-divider [inset]="true"> </mat-divider>
+          <mat-divider style="margin-bottom: 8px;" [inset]="true">
+          </mat-divider>
           <div id="textContainer">
             <p style="text-align: left;">
               Cost to print:
@@ -94,13 +138,23 @@
           </div>
           <mat-divider [inset]="true"></mat-divider>
           <div>
-            <button mat-flat-button color="accent" class="button">
+            <button
+              mat-flat-button
+              color="accent"
+              class="button"
+              style="margin-top: 16px;"
+            >
               <mat-icon>play_arrow </mat-icon>
               ORDER NOW
             </button>
           </div>
           <div>
-            <button mat-flat-button color="accent" class="button">
+            <button
+              mat-flat-button
+              color="accent"
+              class="button"
+              style="margin-bottom: 0;"
+            >
               <mat-icon>
                 add_shopping_cart
               </mat-icon>
