--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,20 +4,27 @@
 html,
 body {
   height: 100%;
+  box-sizing: border-box;
+  margin: 0;
 }
 body {
-  background-color: #f4f3f3;
+  background-color: #e1e2e1;
   margin: 0;
   font-family: "lato", sans-serif;
 }
 
-.h1 {
-  font-family: "rubik", sans-serif;
-  font-weight: 800;
-  font-style: italic;
+.main {
+  position: relative;
+  top: 64px;
 }
 
 mat-card-title {
+  font-family: "rubik", sans-serif;
+  font-weight: 600;
+  font-style: italic;
+}
+
+.mat-sidenav .mat-menu-item {
   font-family: "rubik", sans-serif;
   font-weight: 600;
   font-style: italic;
