--- a/src/theme.scss
+++ b/src/theme.scss
@@ -15,8 +15,41 @@ $secondary-typography: mat-typography-config(
 // Be sure that you only ever include this mixin once!
 @include mat-core($general-typography);
 
-$my-app-primary: mat-palette($mat-indigo);
-$my-app-accent: mat-palette($mat-amber, A200, A100, A400);
+$md-mcgpalette0: (
+  50: #e8e8e8,
+  100: #c6c6c6,
+  200: #a1a1a1,
+  300: #7b7b7b,
+  400: #5e5e5e,
+  500: #424242,
+  600: #3c3c3c,
+  700: #333333,
+  800: #2b2b2b,
+  900: #1d1d1d,
+  A100: #f0cf78,
+  A200: #ebbc4a,
+  A400: red,
+  A700: #e99300,
+  contrast: (
+    50: #000000,
+    100: #000000,
+    200: #000000,
+    300: #ffffff,
+    400: #ffffff,
+    500: #ffffff,
+    600: #ffffff,
+    700: #ffffff,
+    800: #ffffff,
+    900: #ffffff,
+    A100: #000000,
+    A200: #ffffff,
+    A400: #ffffff,
+    A700: #ffffff,
+  ),
+);
+
+$my-app-primary: mat-palette($md-mcgpalette0);
+$my-app-accent: mat-palette($md-mcgpalette0, A400, A200, A700);
 $my-app-warn: mat-palette($mat-red);
 
 $my-app-theme: mat-light-theme($my-app-primary, $my-app-accent, $my-app-warn);
