--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -34,7 +34,8 @@
         Login
       </button>
       <span style="margin-left: 8px;"
-        >Dont have an account? <a [routerLink]="['/signup']">signup</a> here
+        >Dont have an account?
+        <a [routerLink]="['/auth/signup']">signup</a> here
       </span>
     </form>
   </mat-card>
