--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -58,7 +58,7 @@
         Signup
       </button>
       <span style="margin-left: 8px;"
-        >Already have an account? <a [routerLink]="['/login']">login</a> here
+        >Already have an account? <a [routerLink]="['/auth']">login</a> here
       </span>
       <mat-spinner *ngIf="isLoading"></mat-spinner>
     </form>
