--- a/src/app/blocks/header/header.component.html
+++ b/src/app/blocks/header/header.component.html
@@ -15,10 +15,10 @@
       <a mat-button routerLink="/order" routerLinkActive="mat-accent">Order</a>
     </li>
     <li *ngIf="!user" class="hide-on-small-screen">
-      <a mat-button routerLink="/login" routerLinkActive="mat-accent">Login</a>
+      <a mat-button routerLink="/auth" routerLinkActive="mat-accent">Login</a>
     </li>
     <li *ngIf="!user" class="hide-on-small-screen">
-      <a mat-button routerLink="/signup" routerLinkActive="mat-accent"
+      <a mat-button routerLink="/auth/signup" routerLinkActive="mat-accent"
         >Signup</a
       >
     </li>
