--- a/src/app/blocks/root/app.component.html
+++ b/src/app/blocks/root/app.component.html
@@ -16,7 +16,7 @@
 
     <a
       mat-menu-item
-      routerLink="/login"
+      routerLink="/auth"
       routerLinkActive="highlight"
       (click)="sidenav.toggle()"
     >
@@ -25,7 +25,7 @@
 
     <a
       mat-menu-item
-      routerLink="/signup"
+      routerLink="/auth/signup"
       routerLinkActive="highlight"
       (click)="sidenav.toggle()"
       >Signup</a
