--- a/src/app/cart/cart/cart.component.html
+++ b/src/app/cart/cart/cart.component.html
@@ -1,5 +1,7 @@
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+
 <div class="w3-row-padding">
-  <div class="w3-rest">
+  <div class="w3-col s12 l9">
     <mat-card>
       <table mat-table [dataSource]="cart" class="mat-elevation-z8">
         <!-- Image Column -->
@@ -13,7 +15,9 @@
         <!-- Item Column -->
         <ng-container matColumnDef="title">
           <th mat-header-cell *matHeaderCellDef>Title</th>
-          <td mat-cell *matCellDef="let element">{{ element.title }}</td>
+          <td mat-cell *matCellDef="let element">
+            <p class="no-over-flow">{{ element.title }}</p>
+          </td>
           <td mat-footer-cell *matFooterCellDef></td>
         </ng-container>
 
@@ -38,7 +42,9 @@
           <td mat-cell *matCellDef="let transaction">
             {{ transaction.price * transaction.quantity | currency }}
           </td>
-          <td mat-footer-cell *matFooterCellDef>{{ totalPrice | currency }}</td>
+          <td mat-footer-cell *matFooterCellDef>
+            {{ totalPrice | currency }}
+          </td>
         </ng-container>
 
         <ng-container matColumnDef="delete">
@@ -54,8 +60,13 @@
             </button>
           </td>
           <td mat-footer-cell *matFooterCellDef>
-            <button mat-flat-button color="warn" (click)="onClear()">
-              CLEAR CART
+            <button
+              mat-flat-button
+              color="warn"
+              (click)="onClear()"
+              class="delete-button"
+            >
+              CLEAR
             </button>
           </td>
         </ng-container>
@@ -64,6 +75,11 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
         <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
       </table>
+    </mat-card>
+  </div>
+  <div class="w3-col s12 l3">
+    <mat-card>
+      <div #paypal></div>
     </mat-card>
   </div>
 </div>
