--- a/src/app/main/main/main.component.scss
+++ b/src/app/main/main/main.component.scss
@@ -27,10 +27,11 @@ button {
 
 .button {
   // display: flex;
-  // margin-top: 8px;
+  margin-top: 8px;
   margin-left: 0;
   // margin-right: auto;
   // float: left;
+  height: 36px;
 }
 
 .mat-stroked-button {
