--- a/src/app/cart/cart/cart.component.html
+++ b/src/app/cart/cart/cart.component.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
 
-<div class="w3-row-padding">
+<div class="w3-row-padding" style="max-width: 1250px; margin: auto;">
   <div class="w3-col s12 l9">
     <mat-card>
       <table mat-table [dataSource]="cart" class="mat-elevation-z8">
