--- a/src/app/main/main/main.component.html
+++ b/src/app/main/main/main.component.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+
 <div class="w3-main" style="max-width: 1250px; margin: auto;">
   <div class="w3-row-padding">
     <div class="w3-col s12 m8 l9">
@@ -158,6 +160,8 @@
               color="accent"
               class="button"
               style="margin-top: 16px;"
+              (click)="addToCart()"
+              routerLink="/cart"
             >
               <mat-icon>play_arrow </mat-icon>
               ORDER NOW
