--- a/src/app/admin/order-page/order-page.component.html
+++ b/src/app/admin/order-page/order-page.component.html
@@ -9,6 +9,7 @@
     <label style="font-size: large;"> Order {{ id }}</label>
     <!-- <mat-form-field appearance="fill" class="background-red"> -->
     <select
+      *ngIf="!loading"
       style="float: right;"
       [ngClass]="{
         red: order.orderStatus == 'RECIEVED',
@@ -17,6 +18,7 @@
         green: order.orderStatus == 'DELIVERED'
       }"
       [(ngModel)]="order.orderStatus"
+      (change)="updateOrder()"
     >
       <option value="RECIEVED">RECIEVED</option>
       <option value="PRINTING">PRINTING</option>
@@ -24,12 +26,15 @@
 
       <option value="DELIVERED">DELIVERED</option>
     </select>
+
     <p style="float: right; font-size: 18px; margin: 8px;">Order Status:</p>
     <mat-divider
       [inset]="true"
       style="margin-bottom: 8px; margin-top: 16px;"
     ></mat-divider>
-    <div class="w3-row-padding">
+    <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
+
+    <div *ngIf="!loading" class="w3-row-padding">
       <div class="w3-col s6">
         <mat-card-content>
           <ul>
@@ -70,7 +75,13 @@
     </div>
   </mat-card>
   <mat-card style="max-width: 1250px; margin: auto;">
-    <table mat-table [dataSource]="orderItems" class="mat-elevation-z8">
+    <table
+      *ngIf="!loading"
+      mat-table
+      [dataSource]="orderItems"
+      multiTemplateDataRows
+      class="mat-elevation-z8"
+    >
       <!-- Image Column -->
       <ng-container matColumnDef="imgUrl">
         <th mat-header-cell *matHeaderCellDef>Image Url</th>
@@ -83,7 +94,7 @@
       <ng-container matColumnDef="title">
         <th mat-header-cell *matHeaderCellDef>Title</th>
         <td mat-cell *matCellDef="let element">
-          <p class="no-over-flow">{{ element.title }}</p>
+          <p class="no-over-flow">{{ element.model.title }}</p>
         </td>
         <td mat-footer-cell *matFooterCellDef></td>
       </ng-container>
@@ -91,7 +102,7 @@
       <ng-container matColumnDef="quantity">
         <th mat-header-cell *matHeaderCellDef>Quantity</th>
         <td mat-cell *matCellDef="let element">
-          {{ element.quantity }}
+          {{ element.model.quantity }}
         </td>
         <td mat-footer-cell *matFooterCellDef></td>
       </ng-container>
@@ -100,7 +111,7 @@
       <ng-container matColumnDef="price">
         <th mat-header-cell *matHeaderCellDef>Price</th>
         <td mat-cell *matCellDef="let transaction">
-          {{ transaction.price * transaction.quantity | currency }}
+          {{ transaction.price * transaction.model.quantity | currency }}
         </td>
         <td mat-footer-cell *matFooterCellDef></td>
       </ng-container>
@@ -130,8 +141,7 @@
       <ng-container matColumnDef="download">
         <th mat-header-cell *matHeaderCellDef>Download</th>
         <td mat-cell *matCellDef="let element">
-          <a href="/images/myw3schoolsimage.jpg" download></a>
-          <a [href]="element.modelPath" dowload mat-stroked-button>
+          <a [href]="element.model.modelPath" dowload mat-stroked-button>
             DOWNLOAD
           </a>
         </td>
@@ -142,8 +152,44 @@
         </td>
       </ng-container>
 
+      <ng-container matColumnDef="expandedDetail">
+        <td
+          mat-cell
+          *matCellDef="let element"
+          [attr.colspan]="displayedColumns.length"
+        >
+          <div
+            class="example-element-detail"
+            [@detailExpand]="
+              element == expandedElement ? 'expanded' : 'collapsed'
+            "
+          >
+            <div class="example-element-description">
+              <span class="example-element-description-attribution">
+                User's comments:
+              </span>
+              {{ element.model.comment }}
+            </div>
+          </div>
+        </td>
+      </ng-container>
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      <tr
+        mat-row
+        *matRowDef="let row; columns: displayedColumns"
+        class="example-element-row"
+        [class.example-expanded-row]="expandedElement === row"
+        (click)="expandedElement = expandedElement === row ? null : row"
+      >
+        >
+      </tr>
+      <tr
+        mat-row
+        *matRowDef="let row; columns: ['expandedDetail']"
+        class="example-detail-row"
+      ></tr>
+
       <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
     </table>
   </mat-card>
