--- a/src/app/cart/confirmation-page/confirmation-page.component.html
+++ b/src/app/cart/confirmation-page/confirmation-page.component.html
@@ -1,39 +1,51 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
 
 <div class="w3-row-padding">
-  <div class="w3-col s12 m8">
-    <mat-card style="margin-bottom: 16px;">
+  <div class="w3-col s12 l8">
+    <mat-card *ngIf="!error" style="margin-bottom: 16px;">
       <mat-card-title>
         Thank you for your order!
       </mat-card-title>
     </mat-card>
-    <mat-card>
-      <label style="font-size: large;"> Order {{ id }}</label>
-      <!-- <mat-form-field appearance="fill" class="background-red"> -->
-      <div
-        class="text-container"
-        style="float: right;"
-        [ngClass]="{
-          red: order.orderStatus == 'RECIEVED',
-          yellow: order.orderStatus == 'PRINTING',
-          blue: order.orderStatus == 'SHIPPED',
-          green: order.orderStatus == 'DELIVERED'
-        }"
-        [(ngModel)]="order.orderStatus"
-      >
-        {{ order.orderStatus }}
+    <mat-card *ngIf="error" style="margin-bottom: 16px;">
+      <mat-card-title>
+        An error has occurred:
+      </mat-card-title>
+      <mat-card-content> Error: {{ error.message }} </mat-card-content>
+    </mat-card>
+    <mat-card *ngIf="!error">
+      <div class="w3-row">
+        <div class="w3-col s12 m6">
+          <p style="font-size: 18px; margin: 6px; font-weight: bold;">
+            Order {{ id }}
+          </p>
+          <!-- <mat-form-field appearance="fill" class="background-red"> -->
+        </div>
+        <div
+          class="text-container w3-col s12 m6"
+          style="float: right; width: 86px;"
+          [ngClass]="{
+            red: order.orderStatus == 'RECIEVED',
+            yellow: order.orderStatus == 'PRINTING',
+            blue: order.orderStatus == 'SHIPPED',
+            green: order.orderStatus == 'DELIVERED'
+          }"
+          [(ngModel)]="order.orderStatus"
+        >
+          {{ order.orderStatus }}
+        </div>
+        <p style="float: right; font-size: 18px; margin: 6px;">Order Status:</p>
       </div>
-      <p style="float: right; font-size: 18px; margin: 8px;">Order Status:</p>
       <mat-divider
         [inset]="true"
         style="margin-bottom: 8px; margin-top: 16px;"
       ></mat-divider>
       <div class="w3-row-padding">
-        <div class="w3-col s6">
+        <div class="w3-col w3-twothird">
           <mat-card-content>
             <ul>
               <li style="font-size: large;">
-                <span style="">{{ order.customerName }}</span>
+                <span>{{ order.customerName }}</span>
               </li>
               <li>
                 Email:
@@ -45,7 +57,9 @@
               </li>
               <li>
                 Payment Status:
-                <span style="float: right;">{{ order.paymentStatus }}</span>
+                <span style="float: right;">{{
+                  order.paymentDetails.paymentStatus
+                }}</span>
               </li>
               <li>
                 Date of Order:
@@ -83,13 +97,17 @@
       </div>
     </mat-card>
   </div>
-  <div class="w3-col s12 m4">
-    <mat-card>
+  <div class="w3-col s12 l4">
+    <mat-card *ngIf="!error">
       <mat-card-content>
         <p style="text-align: left;">
           Item Subtotal:
           <span style="float: right; font-weight: bold;">
-            <!-- {{ totalPrice | currency }} -->
+            {{
+              order.paymentDetails.totalPrice -
+                order.paymentDetails.shipping -
+                order.paymentDetails.tax | currency
+            }}
           </span>
         </p>
         <mat-divider style="margin-bottom: 8px;" [inset]="true"> </mat-divider>
@@ -98,7 +116,7 @@
             Shipping:
 
             <span style="float: right; font-weight: bold;">
-              <!-- {{ shippingCost | currency }} -->
+              {{ order.paymentDetails.shipping | currency }}
             </span>
           </p>
         </div>
@@ -107,7 +125,7 @@
             Estimated Tax:
 
             <span style="float: right; font-weight: bold;">
-              <!-- {{ totalPrice * 0.05 | currency }} -->
+              {{ order.paymentDetails.tax | currency }}
             </span>
           </p>
         </div>
@@ -117,14 +135,16 @@
             Final Total:
 
             <span style="float: right; font-weight: bold; color: #cc2400;">
-              <!-- {{ totalPrice + totalPrice * 0.05 + shippingCost | currency }} -->
+              {{ order.paymentDetails.totalPrice | currency }}
             </span>
           </p>
         </div>
-        <mat-divider [inset]="true"></mat-divider>
       </mat-card-content>
     </mat-card>
-    <mat-card style="max-width: 1250px; margin: auto;">
+    <mat-card
+      *ngIf="!error"
+      style="max-width: 1250px; margin: auto; margin-top: 16px;"
+    >
       <table mat-table [dataSource]="orderItems" class="mat-elevation-z8">
         <!-- Image Column -->
         <ng-container matColumnDef="imgUrl">
@@ -138,7 +158,7 @@
         <ng-container matColumnDef="title">
           <th mat-header-cell *matHeaderCellDef>Title</th>
           <td mat-cell *matCellDef="let element">
-            <p class="no-over-flow">{{ element.title }}</p>
+            <p class="no-over-flow">{{ element.model.title }}</p>
           </td>
           <td mat-footer-cell *matFooterCellDef></td>
         </ng-container>
@@ -146,7 +166,7 @@
         <ng-container matColumnDef="quantity">
           <th mat-header-cell *matHeaderCellDef>Quantity</th>
           <td mat-cell *matCellDef="let element">
-            {{ element.quantity }}
+            {{ element.model.quantity }}
           </td>
           <td mat-footer-cell *matFooterCellDef></td>
         </ng-container>
@@ -155,7 +175,7 @@
         <ng-container matColumnDef="price">
           <th mat-header-cell *matHeaderCellDef>Price</th>
           <td mat-cell *matCellDef="let transaction">
-            {{ transaction.price * transaction.quantity | currency }}
+            {{ transaction.price * transaction.model.quantity | currency }}
           </td>
           <td mat-footer-cell *matFooterCellDef></td>
         </ng-container>
