--- a/src/app/cart/confirmation-page/confirmation-page.component.scss
+++ b/src/app/cart/confirmation-page/confirmation-page.component.scss
@@ -44,11 +44,9 @@ p {
 }
 
 .text-container {
-  height: 36px;
-  border: none;
+  // height: 36px;
+  border: 0px solid grey;
   border-radius: 4px;
-  border-color: grey;
-  border-width: 1px;
   // background-color: ;
   font-family: "rubik", sans-serif;
   font-weight: 500;
@@ -56,7 +54,8 @@ p {
   font-style: italic;
   color: white;
   text-align: center;
-  text-justify: auto;
+  padding: 8px;
+  // text-justify: ;
   align-content: center;
 }
 
