--- a/src/app/blocks/footer/footer.component.html
+++ b/src/app/blocks/footer/footer.component.html
@@ -19,9 +19,11 @@
     </div>
   </mat-card> -->
   <div class="footer-copyright">
-    <mat-card style="background-color: #424242; color: white;">
-      © 2014 Copyright Text
-      <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+    <mat-card
+      style="background-color: #424242; color: white; border-radius: 0;"
+    >
+      © 2020 All Rights Reserved
+      <!-- <a class="grey-text text-lighten-4 right" href="#!">More Links</a> -->
     </mat-card>
   </div>
 </footer>
