--- a/src/app/user/confirmation-page/confirmation-page.component.html
+++ b/src/app/user/confirmation-page/confirmation-page.component.html
@@ -3,9 +3,14 @@
 <div class="w3-row-padding">
   <div class="w3-col s12 l8">
     <mat-card *ngIf="!error" style="margin-bottom: 16px;">
-      <mat-card-title>
-        Thank you for your order!
-      </mat-card-title>
+      <div style="display: inline;">
+        <a routerLink="/user/orders" mat-flat-button color="primary">
+          <mat-icon>arrow_back_ios</mat-icon>MY ORDERS
+        </a>
+        <mat-card-title style="text-align: center;">
+          Thank you for your order!
+        </mat-card-title>
+      </div>
     </mat-card>
     <mat-card *ngIf="error" style="margin-bottom: 16px;">
       <mat-card-title>
@@ -14,7 +19,9 @@
       <mat-card-content> Error: {{ error.message }} </mat-card-content>
     </mat-card>
     <mat-card *ngIf="!error">
-      <div class="w3-row">
+      <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
+
+      <div class="w3-row" *ngIf="!loading">
         <div class="w3-col s12 m6">
           <p style="font-size: 18px; margin: 6px; font-weight: bold;">
             Order {{ id }}
@@ -40,7 +47,7 @@
         [inset]="true"
         style="margin-bottom: 8px; margin-top: 16px;"
       ></mat-divider>
-      <div class="w3-row-padding">
+      <div class="w3-row-padding" *ngIf="!loading">
         <div class="w3-col w3-twothird">
           <mat-card-content>
             <ul>
@@ -98,7 +105,7 @@
     </mat-card>
   </div>
   <div class="w3-col s12 l4">
-    <mat-card *ngIf="!error">
+    <mat-card *ngIf="!error && !loading">
       <mat-card-content>
         <p style="text-align: left;">
           Item Subtotal:
@@ -142,7 +149,7 @@
       </mat-card-content>
     </mat-card>
     <mat-card
-      *ngIf="!error"
+      *ngIf="!error && !loading"
       style="max-width: 1250px; margin: auto; margin-top: 16px;"
     >
       <table mat-table [dataSource]="orderItems" class="mat-elevation-z8">
