--- a/src/app/user/my-orders/my-orders.component.html
+++ b/src/app/user/my-orders/my-orders.component.html
@@ -1,5 +1,5 @@
 <div style="padding: 16px;">
-  <mat-card style="max-width: 1250px; margin: auto;">
+  <mat-card style="max-width: 1250px; margin: auto; display: block;">
     <mat-form-field>
       <mat-label>Filter</mat-label>
       <input
@@ -16,7 +16,13 @@
         <!-- ID Column -->
         <ng-container matColumnDef="orderId">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
-          <td mat-cell *matCellDef="let row">{{ row.orderId }}</td>
+          <td mat-cell *matCellDef="let row">
+            <div class="hide-on-small-screen">{{ row.orderId }}</div>
+            <div class="show-on-small-screen">
+              {{ row.orderId.substring(0, 6) }}
+              {{ row.orderId.substring(6, 12) }} {{ row.orderId.substring(12) }}
+            </div>
+          </td>
         </ng-container>
 
         <!-- Progress Column -->
@@ -55,15 +61,9 @@
         </ng-container>
 
         <!-- Name Column -->
-        <ng-container matColumnDef="customerName">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>
-            Customer Name
-          </th>
-          <td mat-cell *matCellDef="let row">{{ row.customerName }}</td>
-        </ng-container>
 
         <ng-container matColumnDef="date">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Order Date</th>
           <td mat-cell *matCellDef="let row">{{ row.date | date }}</td>
         </ng-container>
 
@@ -78,9 +78,19 @@
         <ng-container matColumnDef="details">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Details</th>
           <td mat-cell *matCellDef="let row">
-            <a [routerLink]="['/admin/details', row.orderId]" mat-stroked-button
+            <a
+              [routerLink]="['/user/confirmation', row.orderId]"
+              mat-stroked-button
+              class="hide-on-small-screen"
               >DETAILS</a
             >
+            <a
+              [routerLink]="['/user/confirmation', row.orderId]"
+              mat-icon-button
+              class="show-on-small-screen"
+            >
+              <mat-icon>arrow_forward_ios</mat-icon>
+            </a>
           </td>
         </ng-container>
 
