--- a/src/styles.scss
+++ b/src/styles.scss
@@ -64,3 +64,15 @@ mat-card-title {
 mat-form-field {
   width: 100%;
 }
+
+@media only screen and (min-width: 600px) {
+  .show-on-small-screen {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .hide-on-small-screen {
+    display: none;
+  }
+}
